--- a/ClickCounter/index.html
+++ b/ClickCounter/index.html
@@ -9,7 +9,7 @@
       type="image/png"
       href="./../images/clickcounter.png"
     />
-    <title>Click-Counter</title>
+    <title>Click Counter</title>
   </head>
 
   <body>
